--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="supabase-config.js"></script>
+    <script src="api-client.js"></script>
     <script src="script.js"></script>
 </body>
 
