--- a/analyze.html
+++ b/analyze.html
@@ -264,7 +264,7 @@
             </div>
         </main>
     </div>
-    <script src="supabase-config.js"></script>
+    <script src="api-client.js"></script>
     <script src="script.js"></script>
 </body>
 
