--- a/auth.html
+++ b/auth.html
@@ -192,7 +192,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="supabase-config.js"></script>
+    <script src="api-client.js"></script>
     <script src="auth.js"></script>
 </body>
 
