--- a/history.html
+++ b/history.html
@@ -192,7 +192,7 @@
         </main>
     </div>
 
-    <script src="supabase-config.js"></script>
+    <script src="api-client.js"></script>
     <script src="script.js"></script>
 </body>
 
