--- a/reports.html
+++ b/reports.html
@@ -281,7 +281,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="supabase-config.js"></script>
+    <script src="api-client.js"></script>
     <script src="script.js"></script>
 </body>
 
